syntax = "proto3";
package orders;

option csharp_namespace = "Presentation";
import "google/protobuf/timestamp.proto";

service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc AddItems(AddItemsRequest) returns (AddItemsResponse);
  rpc DeleteItems(DeleteItemsRequest) returns (DeleteItemsResponse);
  rpc StartProcessing(StartProcessingRequest) returns (StartProcessingResponse);
  rpc Complete(CompleteRequest) returns (CompleteResponse);
  rpc Cancel(CancelRequest) returns (CancelResponse);
  rpc GetHistory(GetHistoryRequest) returns (stream OrderHistoryItem);
}

message CreateOrderRequest{
  string created_by = 1;
  
}
message CreateOrderResponse{
  int64 order_id = 1;
  OrderState order_state = 2;
  google.protobuf.Timestamp created_at = 3;
  string created_by = 4;
}
message OrderItemInput{
  int64 product_id = 1;
  int32 quantity = 2;
}
message OrderItem{
  int64 order_item_id = 1;
  int64 order_id = 2;
  int64 product_id = 3;
  int32 quantity = 4;
  bool deleted = 5;
}
message AddItemsRequest{
  int64 order_id = 1;
  repeated OrderItem items = 2;
}
message AddItemsResponse{
  repeated OrderItem added_items = 1;
}

message DeleteItemsRequest{
  int64 order_id = 1;
  int64 product_id = 2;
}
message DeleteItemsResponse{

}
message StartProcessingRequest{
  int64 order_id = 1;
}
message StartProcessingResponse{
  
}

message CompleteRequest{
  int64 order_id = 1;
}
message CompleteResponse{
  
}

message CancelRequest{
  int64 order_id = 1;
}

message CancelResponse{
  
}
message GetHistoryRequest{
  int64 order_id = 1;
  int64 cursor = 2;
  int32 page_size = 3;
}

enum OrderHistoryKind{
  ORDER_HISTORY_KIND_UNSPECIFIED = 0;
  ORDER_HISTORY_KIND_CREATED = 1;
  ORDER_HISTORY_KIND_ITEM_ADDED = 2;
  ORDER_HISTORY_KIND_ITEM_REMOVED = 3;
  ORDER_HISTORY_KIND_STATE_CHANGED = 4;
}
message OrderHistoryItem{
  int64 id = 1;
  int64 order_id = 2;
  google.protobuf.Timestamp created_at = 3;
  OrderHistoryKind kind = 4;
  
  oneof payload{
    OrderCreatedPayload created = 5;
    ItemAddedPayload item_added = 6;
    ItemRemovedPayload item_removed = 7;
    StateChangedPayload state_changed = 8;
  }
}
message  OrderCreatedPayload{
  string created_by = 1;
}
message ItemAddedPayload{
  int64 product_id = 1;
  int32 quantity = 2;
}

message ItemRemovedPayload{
  int64 product_id = 1;
}
enum OrderState{
    ORDER_STATE_UNSPECIFIED  = 0;
    ORDER_STATE_CREATED = 1;
    ORDER_STATE_PROCESSING = 2;
    ORDER_STATE_COMPLETED = 3;
    ORDER_STATE_CANCELLED = 4;
    
}
message StateChangedPayload{
    OrderState old_state = 1;
    OrderState new_state = 2;
}